Fixed a bug in both versions of the UG.
git-svn-id: https://svn.wehi.edu.au/svn/repos/SmythLab/ALun/csaw@2021 3f7291af-367f-0410-92d8-b778034d9185

--- a/userguide/csaw_release.Rnw
+++ b/userguide/csaw_release.Rnw
@@ -1896,7 +1896,7 @@ This paramater can also interpreted as the maximum distance at which two binding
 
 <<>>=
 merged.max <- mergeWindows(rowData(data), tol=1000L, max.width=5000L)
-summary(width(merged$max))
+summary(width(merged.max$region))
 @
 
 % Is there a better way to do this? I suppose we could choose the number of
