Minor rewording of UG for aesthetics.
git-svn-id: https://svn.wehi.edu.au/svn/repos/SmythLab/ALun/csaw@2023 3f7291af-367f-0410-92d8-b778034d9185

--- a/userguide/csaw.Rnw
+++ b/userguide/csaw.Rnw
@@ -1976,7 +1976,7 @@ head(tab.best.2)
 @
 
 Arbitrary summarization schemes can be implemented manually with the \code{aggregate} function.
-For example, the code below finds the window with the largest absolute log-fold change in each cluster.
+This example finds the window with the largest absolute log-fold change in each cluster.
 
 <<>>=
 manual <- aggregate(results$table$logFC ~ merged$id,  
